--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <footer>
                 <div class="foot">
                     <h4>Copyright 2023 Wave Cafe | Design remake by CODEMaster</h4>
+                    <i>Click on the Github Icon to access CODEMaster works</i>
+                    <a href="https://github.com/PEACE-DFG?tab=repositories" target="_blank"><i class="fab fa-github" style="font-size: 40px; color:whitesmoke"></i></a>
 
                 </div>
             </footer>
